fix (docker): fixed error go module but got new prblm with watcher

--- a/ads/Dockerfile
+++ b/ads/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang
+FROM golang:latest
 
 RUN mkdir -p /go/src/golangmicroservices
 
@@ -7,5 +7,6 @@ ADD . /go/src/golangmicroservices
 RUN go get  -t -v ./...
 RUN go get  github.com/canthefason/go-watcher
 RUN go install github.com/canthefason/go-watcher/cmd/watcher
+
 
 ENTRYPOINT  watcher -run golangmicroservices/ads/cmd  -watch golangmicroservices/ads
