fix (docker): change dockerfile comportement & removed watcher will try to add it back later

--- a/transactions/Dockerfile
+++ b/transactions/Dockerfile
@@ -1,11 +1,13 @@
 FROM golang:latest
 
-RUN mkdir -p /go/src/golangmicroservices
+WORKDIR /go/src/golangmicroservices/transaction
 
 ADD . /go/src/golangmicroservices
 
+RUN go mod vendor
 RUN go get  -t -v ./...
 RUN go get  github.com/canthefason/go-watcher
-RUN go install github.com/canthefason/go-watcher/cmd/watcher
+#RUN go install github.com/canthefason/go-watcher/cmd/watcher
 
-ENTRYPOINT  watcher -run golangmicroservices/transactions/cmd  -watch golangmicroservices/transactions
+#ENTRYPOINT  watcher -run golangmicroservices/accounts/cmd  -watch golangmicroservices/accounts
+CMD go run cmd/main.go
