--- a/ads/Dockerfile
+++ b/ads/Dockerfile
@@ -1,12 +1,13 @@
 FROM golang:latest
 
-RUN mkdir -p /go/src/golangmicroservices
+WORKDIR /go/src/golangmicroservices/ads
 
 ADD . /go/src/golangmicroservices
 
+RUN go mod vendor
 RUN go get  -t -v ./...
 RUN go get  github.com/canthefason/go-watcher
-RUN go install github.com/canthefason/go-watcher/cmd/watcher
+#RUN go install github.com/canthefason/go-watcher/cmd/watcher
 
-
-ENTRYPOINT  watcher -run golangmicroservices/ads/cmd  -watch golangmicroservices/ads
+#ENTRYPOINT  watcher -run golangmicroservices/accounts/cmd  -watch golangmicroservices/accounts
+CMD go run cmd/main.go
