--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,12 @@ services:
     container_name: transactions
     ports:
       - 8801:8081
+  mongodb:
+    image: mongo:4.0
+    command: mongod --smallfiles --logpath=/dev/null
+    container_name: mongodb
+    environment:
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
+    ports:
+      - 27017:27017
